Fix filter btn text wrap

--- a/assets/style/pages/TodoIndex.css
+++ b/assets/style/pages/TodoIndex.css
@@ -14,9 +14,12 @@
             position: relative;
 
             .filter-btn {
-                /* font-weight: bold; */
                 font-size: 1em;
                 overflow: hidden;
+
+                span {
+                    white-space: nowrap;
+                }
 
                 &::before {
                     content: "x";
